--- a/src/pages/landing-pages/landing-1.astro
+++ b/src/pages/landing-pages/landing-1.astro
@@ -83,7 +83,7 @@ const seo = {
 		<Button slot="column-3-cta">Learn More</Button>
 	</ThreeColumnTextSection>
 
-	<YouTubeEmbedSection url="https://www.youtube.com/watch?v=cbYr75_R15M" rounded
+	<YouTubeEmbedSection url="https://www.youtube.com/watch?v=meU5NVWaJk8" rounded
 	/>
 
 	<StickyTextImageSection>
